# AsyncMessengerServer

./: .gitignore  CMakeLists.txt  server.h  session.h  test.py
build-test_client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  ServerMessengerProj.cbp  cmake_install.cmake
build-test_client-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-cc25674c5cfb0f6c06be.json  cmakeFiles-v1-9015596f9e93f6a412d1.json  codemodel-v2-624f087d92d888f811ef.json  index-2024-08-07T17-15-21-0465.json  target-ServerMessengerProj-Debug-0eae9458f0f9d33cf02e.json
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.h  session.cpp  session.h
test_client/: CMakeLists.txt  main.cpp
testclient/: CMakeLists.txt
